--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wolfyscript.wolfyutils</groupId>
-    <artifactId>wolfyutilities-parent</artifactId>
-    <version>3.16-abstract-api-SNAPSHOT</version>
+    <artifactId>wolfyutilities</artifactId>
+    <version>4.16-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
