--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,6 @@
 #     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
 
-group=com.wolfyscript.wolfyutils
-version=5.0-alpha.2-SNAPSHOT
-apiVersion=5.0-SNAPSHOT
+group=com.wolfyscript.viewportl
+version=0.1-alpha-SNAPSHOT
+apiVersion=0.1-alpha
