--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,10 @@ junit-jupiter = "5.8.2"
 reflections = "0.10.2"
 typesafe-config = "1.3.1"
 
+## plugins
+shadow = "8.1.7"
+## ##
+
 ## Spigot Impl dependencies ##
 papermc = "1.20.4-R0.1-SNAPSHOT"
 bstats-bukkit = "3.0.0"
@@ -57,3 +61,6 @@ de-tr7zw-item-nbt-api = { module = "de.tr7zw:item-nbt-api", version.ref = "item-
 de-tr7zw-nbt-data-api = { module = "de.tr7zw:nbt-data-api", version.ref = "nbt-data-api" }
 net-kyori-adventure-platform-bukkit = { module = "net.kyori:adventure-platform-bukkit", version.ref = "adventure-platform-api" }
 ## ##
+
+[plugins]
+goooler-shadow = { id = "io.github.goooler.shadow", version.ref = "shadow" }
