--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,19 +46,16 @@ net-kyori-adventure-api = { module = "net.kyori:adventure-api", version.ref = "a
 net-kyori-adventure-platform-api = { module = "net.kyori:adventure-platform-api", version.ref = "adventure-platform-api" }
 net-kyori-adventure-text-minimessage = { module = "net.kyori:adventure-text-minimessage", version.ref = "adventure-minimessage" }
 # Configs (Jackson + HOCON)
-com-fasterxml-jackson-core-jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson" }
-com-fasterxml-jackson-core-jackson-annotations = { module = "com.fasterxml.jackson.core:jackson-annotations", version.ref = "jackson" }
-com-fasterxml-jackson-core-jackson-core = { module = "com.fasterxml.jackson.core:jackson-core", version.ref = "jackson" }
-com-wolfyscript-jackson-dataformat-hocon = { module = "com.wolfyscript:jackson-dataformat-hocon", version.ref = "dataformat-hocon" }
+jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson" }
+jackson-annotations = { module = "com.fasterxml.jackson.core:jackson-annotations", version.ref = "jackson" }
+jackson-core = { module = "com.fasterxml.jackson.core:jackson-core", version.ref = "jackson" }
+jackson-dataformat-hocon = { module = "com.wolfyscript:jackson-dataformat-hocon", version.ref = "dataformat-hocon" }
 com-typesafe-config = { module = "com.typesafe:config", version.ref = "typesafe-config" }
 # Testing
 org-junit-jupiter-junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
 
 ## Spigot Impl dependencies ##
 io-papermc-paper = { module = "io.papermc.paper:paper-api", version.ref = "papermc" }
-org-bstats-bukkit = { module = "org.bstats:bstats-bukkit", version.ref = "bstats-bukkit" }
-de-tr7zw-item-nbt-api = { module = "de.tr7zw:item-nbt-api", version.ref = "item-nbt-api" }
-de-tr7zw-nbt-data-api = { module = "de.tr7zw:nbt-data-api", version.ref = "nbt-data-api" }
 net-kyori-adventure-platform-bukkit = { module = "net.kyori:adventure-platform-bukkit", version.ref = "adventure-platform-api" }
 ## ##
 
