--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,8 @@ junit-jupiter = "5.8.2"
 reflections = "0.10.2"
 typesafe-config = "1.3.1"
 
+scafall = "alpha0.0.1.0-SNAPSHOT"
+
 ## plugins
 shadow = "8.1.7"
 ## ##
@@ -57,6 +59,13 @@ jackson-dataformat-hocon = { module = "com.wolfyscript:jackson-dataformat-hocon"
 com-typesafe-config = { module = "com.typesafe:config", version.ref = "typesafe-config" }
 # Testing
 org-junit-jupiter-junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
+
+## scafall
+scafall-api = { module = "com.wolfyscript.scafall:api", version.ref = "scafall" }
+scafall-spigot-impl = { module = "com.wolfyscript.scafall.spigot:spigot", version.ref = "scafall" }
+scafall-spigot-platform = { module = "com.wolfyscript.scafall.spigot:spigot-platform", version.ref = "scafall" }
+scafall-sponge-impl = { module = "com.wolfyscript.scafall.sponge:sponge", version.ref = "scafall" }
+scafall-sponge-platform = { module = "com.wolfyscript.scafall.sponge:sponge-platform", version.ref = "scafall" }
 
 ## Spigot Impl dependencies ##
 io-papermc-paper = { module = "io.papermc.paper:paper-api", version.ref = "papermc" }
