--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,14 @@
 # https://docs.gradle.org/current/userguide/platforms.html#sub::toml-dependencies-format
 
 [versions]
-kotlin-stdlib = "2.0.20"
+kotlin-stdlib = "2.0.21"
 jackson = "2.15.4"
 guava = "31.1-jre"
 guice = "7.0.0"
-authlib = "1.5.21"
+authlib = "6.0.58"
 dataformat-hocon = "2.1-SNAPSHOT"
 netty = "4.1.74.Final"
-fastutil = "8.5.6"
+fastutil = "8.5.15"
 adventure-api = "4.10.1"
 adventure-platform-api = "4.1.0"
 adventure-minimessage = "4.10.0"
@@ -20,9 +20,13 @@ typesafe-config = "1.3.1"
 
 scafall = "alpha0.0.1.0-SNAPSHOT"
 
+minecraft = "1.21.5"
+fabric-loom = "1.10-SNAPSHOT"
+
 ## plugins
 shadow = "8.1.7"
 dev-tools = "a2.0.1.0"
+artifactory = "5+"
 ## ##
 
 ## Spigot Impl dependencies ##
@@ -80,3 +84,5 @@ goooler-shadow = { id = "io.github.goooler.shadow", version.ref = "shadow" }
 spongepowered-gradle = { id = "org.spongepowered.gradle.plugin", version.ref = "sponge-gradle" }
 devtools-docker-run = { id = "com.wolfyscript.devtools.docker.run", version.ref = "dev-tools" }
 devtools-docker-minecraft = { id = "com.wolfyscript.devtools.docker.minecraft_servers", version.ref = "dev-tools" }
+artifactory = { id = "com.jfrog.artifactory", version.ref = "artifactory"}
+fabric-loom = { id = "fabric-loom", version.ref = "fabric-loom" }
